--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,37 @@
 
 <html>
 <head>
+  <style>
+    .input, .btn {
+      font-size: 24px;
+    }
+    .btn {
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <div>
-    <textarea name="name" rows="20" cols="80" id="input"></textarea>
+    <textarea name="name" class="input" rows="20" cols="80" id="input"></textarea>
   </div>
   <div style="margin-top: 10px">
-    <button type="button" name="button" id="btn" onclick="handleClick()">getsum</button>
+    <button type="button" name="button" id="btn" class="btn" onclick="handleClick()">getsum</button>
   </div>
   <script type="text/javascript">
+    window.onload = () => {
+      document.getElementById("input").focus()
+    }
+    function formatNumber(num) {
+      // https://blog.abelotech.com/posts/number-currency-formatting-javascript/
+      return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')
+    }
     // https://gist.github.com/min9nim/814663f37f565c540c8bbee9296ea6a4
     function handleClick(){
       const value = document.getElementById("input").value
       const mapper = str => Number(str.replace(',', ''))
       const acc = (a,b) => a+b
       const sum = value.trim().split('\n').map(mapper).reduce(acc)
-      alert(sum)
+      alert(formatNumber(sum))
     }
   </script>
 </body>
