--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
     window.onload = () => {
       let input = document.getElementById("input")
       input.focus()
+      if(!navigator.clipboard.readText){
+        document.execCommand("paste")
+        return
+      }
       navigator.clipboard.readText()
         .then(text => {
           input.value = text
