--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 
 <html>
 <head>
+  <meta charset="UTF-8">
   <style>
     .input, .btn {
       font-size: 24px;
@@ -25,14 +26,20 @@
       //   document.execCommand("paste")
       //   return
       // }
-      navigator.clipboard.readText()
-        .then(text => {
-          input.value = text
-          getSum()
-        })
-        .catch(err => {
-          console.error('Failed to read clipboard contents: ', err)
-        })
+      navigator.permissions.query({name: "clipboard-read"}).then(result => {
+        console.log({result})
+        if(result.state == "granted" || result.state == "prompt"){
+          navigator.clipboard.readText()
+            .then(text => {
+              input.value = text
+              getSum()
+            })
+            .catch(err => {
+              console.error('Failed to read clipboard contents: ', err)
+            })
+        }
+      })
+
     }
     function formatNumber(num) {
       // https://blog.abelotech.com/posts/number-currency-formatting-javascript/
