--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
     .sum h1 {
       font-size: 100px;
     }
+    #detail {
+      margin-top: 20px;
+      margin-bottom: 0px;
+      font-size: 20px;
+    }
+    #result {
+      margin-top: 5px;
+    }
   </style>
 </head>
 <body>
@@ -16,16 +24,13 @@
     <textarea id="input" name="name" class="input" rows="8" cols="40" onkeyup="getSum()"></textarea>
   </div>
   <div class="sum">
+    <h4 id="detail"></h4>
     <h1 id="result"></h1>
   </div>
   <script type="text/javascript">
     window.onload = () => {
       let input = document.getElementById("input")
       input.focus()
-      // if(!navigator.clipboard.readText){
-      //   document.execCommand("paste")
-      //   return
-      // }
       navigator.permissions.query({name: "clipboard-read"}).then(result => {
         console.log({result})
         if(result.state == "granted" || result.state == "prompt"){
@@ -48,9 +53,11 @@
     // https://gist.github.com/min9nim/814663f37f565c540c8bbee9296ea6a4
     function getSum(){
       const value = document.getElementById("input").value
-      const mapper = str => Number(str.replace(',', ''))
+      const mapper = str => Number(str.replace(/\D/g, ''))
       const acc = (a,b) => a+b
-      const sum = value.trim().split('\n').map(mapper).reduce(acc)
+      const mapped = value.trim().split('\n').map(mapper)
+      document.getElementById("detail").innerText = mapped.join(' + ') + ' ='
+      const sum = mapped.reduce(acc)
       document.getElementById("result").innerText = formatNumber(sum)
     }
   </script>
