--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta charset="UTF-8" />
     <style>
       .input,
@@ -67,7 +68,7 @@
           .trim()
           .split("\n")
           .map(mapper)
-        document.getElementById("detail").innerText = mapped.join(" + ") + " ="
+        document.getElementById("detail").innerText = mapped.map(formatNumber).join(" + ") + " ="
         const sum = mapped.reduce(acc)
         document.getElementById("result").innerText = formatNumber(sum)
       }
