--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         font-size: 24px;
       }
       .sum h1 {
-        font-size: 100px;
+        font-size: 50px;
       }
       #detail {
         margin-top: 20px;
@@ -16,7 +16,7 @@
         font-size: 20px;
       }
       .main{
-        margin: 10px;
+        margin: 5px;
       }
       #input {
         width: 100%;
@@ -86,6 +86,7 @@
       function clearInput(){
         document.getElementById("input").value = ''
         document.getElementById("detail").innerText = ''
+        document.getElementById("result").innerText = ''
         document.getElementById("input").foucs()
       }
     </script>
