--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
         document.getElementById("input").value = ''
         document.getElementById("detail").innerText = ''
         document.getElementById("result").innerText = ''
-        document.getElementById("input").foucs()
+        document.getElementById("input").focus()
       }
     </script>
   </body>
