--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="main">
-      <h3>Input the number per one line to get sum of numbers</h3>
+      <h3>Input one number per line to get sum of numbers</h3>
       <div>
         <textarea
           id="input"
